--- a/Diagnosis.Client.App/Controls/Search/CritSearchResult.xaml
+++ b/Diagnosis.Client.App/Controls/Search/CritSearchResult.xaml
@@ -9,7 +9,8 @@
              mc:Ignorable="d"
              x:Name="searchResult"
              Background="Transparent"
-             d:DataContext="{d:DesignInstance design:SamplePatResultViewModel,IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance design:SamplePatResultViewModel,
+                                              IsDesignTimeCreatable=True}"
              d:DesignHeight="300"
              d:DesignWidth="250">
     <UserControl.Resources>
@@ -26,7 +27,8 @@
         </Grid.RowDefinitions>
         <headers:Holder DataContext="{Binding Patient}" />
         <diag:CommaList ItemsSource="{Binding TopHrs}"
-                        Visibility="{Binding TopHrs.Count, Converter={StaticResource MoreThanToVisibility}}"                        
+                        Visibility="{Binding TopHrs.Count,
+                                             Converter={StaticResource MoreThanToVisibility}}"
                         Grid.Column="1">
             <diag:CommaList.ItemTemplate>
                 <DataTemplate>
@@ -54,13 +56,20 @@
                         <TextBlock Text="{Binding Code}"
                                    Grid.Column="0" />
                         <TextBlock Text="{Binding Description}"
+                                   MaxHeight="50"
+                                   Width="auto"
+                                   TextTrimming="WordEllipsis"
+                                   Margin="10 0"
                                    Grid.Column="1" />
                         <TextBlock Text="{Binding Value}"
                                    Grid.Column="2" />
-                        <Button Content="edit"
-                                Command="{Binding DataContext.EditCriterionCommand, ElementName=searchResult}"
-                                CommandParameter="{Binding}"
-                                Grid.Column="3" />
+                        <StackPanel Grid.Column="3"
+                                    Style="{StaticResource hidingListBoxItemPanel}">
+                            <Button Content="edit"
+                                    Command="{Binding DataContext.EditCriterionCommand,
+                                                      ElementName=searchResult}"
+                                    CommandParameter="{Binding}" />
+                        </StackPanel>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
